fix: align notifcation page search field color with other pages (#1178)
https://github.com/eclipse-tractusx/portal-frontend/issues/1169

--- a/src/components/pages/NotificationCenter/Notifications.scss
+++ b/src/components/pages/NotificationCenter/Notifications.scss
@@ -193,9 +193,6 @@
 
   .searchContainer .MuiBox-root {
     width: 40%;
-    svg {
-      color: #0f71cb;
-    }
   }
   .searchContainer .MuiBox-root svg:hover {
     background-color: rgb(176 206 235 / 40%);
@@ -203,8 +200,6 @@
   }
 
   .searchContainer .MuiOutlinedInput-root .MuiOutlinedInput-notchedOutline {
-    border-color: #fdb943 !important;
-    border-width: 2px;
     border-radius: 16px;
   }
 
